fix: Remove unused check on delete persistables [DHIS2-17402] (#17784)
* fix: Remove unused check on delete persistables [DHIS2-17402]

* Code review comments

* Code review comments